# simplest_ffmpeg_device

./: .gitignore  CMakeLists.txt  README.md
src/: simplest_ffmpeg_grabdesktop.cpp  simplest_ffmpeg_readcamera.cpp
